vivado/lidar_arm_control/bare_metal_system/bare_metal_system.sdk/.metadata/.plugins/org.eclipse.cdt.ui/lidar_arm_control_bsp_xuartlite_intr_example_1.build.log
00:42:33 **** Auto Build of configuration Debug for project lidar_arm_control_bsp_xuartlite_intr_example_1 ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/xuartlite_intr_example.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xuartlite_intr_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../lidar_arm_control_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/xuartlite_intr_example.d" -MT"src/xuartlite_intr_example.o" -o "src/xuartlite_intr_example.o" "../src/xuartlite_intr_example.c"
../src/xuartlite_intr_example.c: In function 'SetupInterruptSystem':
../src/xuartlite_intr_example.c:345:11: warning: implicit declaration of function 'XIntc_Initialize'; did you mean 'XUartLite_Initialize'? [-Wimplicit-function-declaration]
  Status = XIntc_Initialize(&InterruptController, INTC_DEVICE_ID);
           ^~~~~~~~~~~~~~~~
           XUartLite_Initialize
../src/xuartlite_intr_example.c:345:29: error: 'InterruptController' undeclared (first use in this function); did you mean 'XInterruptHandler'?
  Status = XIntc_Initialize(&InterruptController, INTC_DEVICE_ID);
                             ^~~~~~~~~~~~~~~~~~~
                             XInterruptHandler
../src/xuartlite_intr_example.c:345:29: note: each undeclared identifier is reported only once for each function it appears in
../src/xuartlite_intr_example.c:345:50: error: 'INTC_DEVICE_ID' undeclared (first use in this function); did you mean 'UARTLITE_DEVICE_ID'?
  Status = XIntc_Initialize(&InterruptController, INTC_DEVICE_ID);
                                                  ^~~~~~~~~~~~~~
                                                  UARTLITE_DEVICE_ID
../src/xuartlite_intr_example.c:356:11: warning: implicit declaration of function 'XIntc_Connect' [-Wimplicit-function-declaration]
  Status = XIntc_Connect(&InterruptController, UARTLITE_INT_IRQ_ID,
           ^~~~~~~~~~~~~
../src/xuartlite_intr_example.c:368:11: warning: implicit declaration of function 'XIntc_Start' [-Wimplicit-function-declaration]
  Status = XIntc_Start(&InterruptController, XIN_REAL_MODE);
           ^~~~~~~~~~~
../src/xuartlite_intr_example.c:368:45: error: 'XIN_REAL_MODE' undeclared (first use in this function)
  Status = XIntc_Start(&InterruptController, XIN_REAL_MODE);
                                             ^~~~~~~~~~~~~
../src/xuartlite_intr_example.c:376:2: warning: implicit declaration of function 'XIntc_Enable' [-Wimplicit-function-declaration]
  XIntc_Enable(&InterruptController, UARTLITE_INT_IRQ_ID);
  ^~~~~~~~~~~~
../src/xuartlite_intr_example.c:387:27: error: 'XIntc_InterruptHandler' undeclared (first use in this function); did you mean 'Xil_InterruptHandler'?
     (Xil_ExceptionHandler)XIntc_InterruptHandler,
                           ^~~~~~~~~~~~~~~~~~~~~~
                           Xil_InterruptHandler
src/subdir.mk:21: recipe for target 'src/xuartlite_intr_example.o' failed
make: *** [src/xuartlite_intr_example.o] Error 1

00:42:33 Build Finished (took 115ms)

